# recommender

./: setup.cfg
notebooks/: train-test-split.ipynb
recommender/: constants.py  workflow_test.py
recommender/stage1/: main.py
recommender/stage1/steps/: column_encoder.py  data_loader.py  filter_scores.py  group_scores.py  score_events.py  train_test_split.py
recommender/stage1/tests/: test_train_test_split.py
recommender/workflow_dev/: workflow_stage1.py  workflow_test.py
recommender/workflow_dev/mock_data/: events.csv
