[metadata]
name = SimpleRecommendationEngine
url = https://github.com/Arborian/recommender
author = Rick Copeland
author_email = rick@arborian.com
version = 0.0.1
description = This should be a short description of our project
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = test, class

[options]
packages = find:
install_requires =
    jupyter
    sklearn
    scipy
    numpy

[options.entry_points]
console_scripts =
    recommender-train=recommender.scripts:run_train
    recommender-test=recommender.scripts:run_test
